--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,10 +1,10 @@
-<filter>
+<!-- <filter>
   <filter-name>CorsFilter</filter-name>
   <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
-  <!-- <init-param>
+  <init-param>
     <param-name>cors.allowed.origins</param-name>
     <param-value>https://pdm.pw:8443, https://pdm.pw, ./*</param-value>
-  </init-param> -->
+  </init-param>
   <init-param>
     <param-name>cors.allowed.methods</param-name>
     <param-value>GET,POST,HEAD,OPTIONS,PUT</param-value>
@@ -29,4 +29,4 @@
 <filter-mapping>
   <filter-name>CorsFilter</filter-name>
   <url-pattern>/*</url-pattern>
-</filter-mapping>
+</filter-mapping> -->
