--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<!-- <filter>
+<filter>
   <filter-name>CorsFilter</filter-name>
   <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
   <init-param>
@@ -11,7 +11,7 @@
   </init-param>
   <init-param>
     <param-name>cors.allowed.headers</param-name>
-    <param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers</param-value>
+    <param-value>*</param-value>
   </init-param>
   <init-param>
     <param-name>cors.exposed.headers</param-name>
@@ -29,4 +29,4 @@
 <filter-mapping>
   <filter-name>CorsFilter</filter-name>
   <url-pattern>/*</url-pattern>
-</filter-mapping> -->
+</filter-mapping>
