--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,29 +1,8 @@
 <filter>
-  <filter-name>CorsFilter</filter-name>
-  <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
-  <init-param>
-    <param-name>cors.allowed.origins</param-name>
-    <param-value>https://pdm.pw:8443, https://pdm.pw, ./*</param-value>
-  </init-param>
-  <init-param>
-    <param-name>cors.allowed.methods</param-name>
-    <param-value>GET,POST,HEAD,OPTIONS,PUT</param-value>
-  </init-param>
-
-  <init-param>
-    <param-name>cors.exposed.headers</param-name>
-    <param-value>Access-Control-Allow-Origin,Access-Control-Allow-*,Access-Control-Allow-Credentials</param-value>
-  </init-param>
-  <init-param>
-    <param-name>cors.support.credentials</param-name>
-    <param-value>true</param-value>
-  </init-param>
-  <init-param>
-    <param-name>cors.preflight.maxage</param-name>
-    <param-value>10000</param-value>
-  </init-param>
+    <filter-name>CORSFilter</filter-name>
+    <filter-class>com.common.CORSFilter</filter-class>
 </filter>
 <filter-mapping>
-  <filter-name>CorsFilter</filter-name>
-  <url-pattern>/*</url-pattern>
+    <filter-name>CORSFilter</filter-name>
+    <url-pattern>/*</url-pattern>
 </filter-mapping>
