--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-<display-name>HttpResponseHeader</display-name>
+<display-name>CORSFilter</display-name>
 
 <servlet>
 <description></description>
-<display-name>HttpResponseHeaderExample</display-name>
-<servlet-name>HttpResponseHeaderExample</servlet-name>
-<servlet-class>HttpResponseHeaderExample</servlet-class>
+<display-name>CORSFilter</display-name>
+<servlet-name>CORSFilter</servlet-name>
+<servlet-class>CORSFilter</servlet-class>
 </servlet>
 <servlet-mapping>
-<servlet-name>HttpResponseHeaderExample</servlet-name>
-<url-pattern>/HttpResponseHeaderExample</url-pattern>
+<servlet-name>CORSFilter</servlet-name>
+<url-pattern>/CORSFilter</url-pattern>
 </servlet-mapping>
 </web-app>
