--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -3,13 +3,19 @@
 <display-name>CORSFilter</display-name>
 
 <servlet>
-<description></description>
-<display-name>CORSFilter</display-name>
-<servlet-name>CORSFilter</servlet-name>
-<servlet-class>com.CORSFilter</servlet-class>
+  <description></description>
+  <display-name>CORSFilter</display-name>
+  <servlet-name>CORSFilter</servlet-name>
+  <servlet-class>com.CORSFilter</servlet-class>
 </servlet>
 <servlet-mapping>
-<servlet-name>CORSFilter</servlet-name>
-<url-pattern>/note</url-pattern>
+  <servlet-name>CORSFilter</servlet-name>
+  <url-pattern>/note</url-pattern>
 </servlet-mapping>
+<welcome-file-list>
+  <welcome-file>index.html</welcome-file>
+  <welcome-file>index.xhtml</welcome-file>
+  <welcome-file>index.htm</welcome-file>
+  <welcome-file>index.jsp</welcome-file>
+</welcome-file-list>
 </web-app>
