--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pdm-crypt-module"]
-	path = pdm-crypt-module
+	path = src/new_src/pdm-notes/src/assets/pdm-crypt-module
 	url = https://github.com/2042third/pdm-crypt-module
