--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,4 @@
 
+[submodule "src/new_src/pdm-notes/src/app/pdm-crypt-module"]
+	path = src/new_src/pdm-notes/src/app/pdm-crypt-module
+	url = https://github.com/2042third/pdm-crypt-module
