--- a/src/new_src/pdm-notes/package.json
+++ b/src/new_src/pdm-notes/package.json
@@ -27,6 +27,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "ng": "^0.0.0",
+    "npm": "^8.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -45,6 +47,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "node": "^16.13.1",
     "typescript": "~4.5.2"
   }
 }
