--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 </servlet>
 <servlet-mapping>
   <servlet-name>SignIn</servlet-name>
-  <url-pattern>login</url-pattern>
+  <url-pattern>/login</url-pattern>
 </servlet-mapping>
 
 <servlet>
