--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -8,19 +8,6 @@
 <display-name>CORSFilter</display-name>
 
 
-
-<servlet>
-  <description></description>
-  <display-name>CORSFilter</display-name>
-  <servlet-name>CORSFilter</servlet-name>
-  <servlet-class>cors.CORSFilter</servlet-class>
-</servlet>
-<servlet-mapping>
-  <servlet-name>CORSFilter</servlet-name>
-  <url-pattern></url-pattern>
-</servlet-mapping>
-
-
 <servlet>
   <description></description>
   <display-name>SignIn</display-name>
@@ -29,7 +16,7 @@
 </servlet>
 <servlet-mapping>
   <servlet-name>SignIn</servlet-name>
-  <url-pattern>/login</url-pattern>
+  <url-pattern>/register</url-pattern>
 </servlet-mapping>
 
 <servlet>
@@ -42,6 +29,19 @@
   <servlet-name>DataStart</servlet-name>
   <url-pattern>/service</url-pattern>
 </servlet-mapping>
+
+<servlet>
+  <description></description>
+  <display-name>CORSFilter</display-name>
+  <servlet-name>CORSFilter</servlet-name>
+  <servlet-class>cors.CORSFilter</servlet-class>
+</servlet>
+<servlet-mapping>
+  <servlet-name>CORSFilter</servlet-name>
+  <url-pattern>/*</url-pattern>
+</servlet-mapping>
+
+
 
 <!-- <welcome-file-list>
   <welcome-file>index.html</welcome-file>
