--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,49 @@
 {
-  "terminal.integrated.defaultProfile.windows": "Command Prompt"
+  "terminal.integrated.defaultProfile.windows": "Command Prompt",
+  "java.project.referencedLibraries": [
+    "lib/**/*.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\annotations-api.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\catalina.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\catalina-ant.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\catalina-ha.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\catalina-ssi.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\catalina-storeconfig.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\catalina-tribes.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\ecj-4.20.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\el-api.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\jakartaee-migration-1.0.0-shaded.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\jasper.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\jasper-el.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\jaspic-api.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\jsp-api.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\servlet-api.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-api.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-coyote.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-dbcp.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-cs.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-de.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-es.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-fr.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-ja.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-ko.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-pt-BR.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-ru.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-i18n-zh-CN.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-jdbc.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-jni.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-util.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-util-scan.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\tomcat-websocket.jar",
+    "c:\\Users\\18604\\Desktop\\net\\apache-tomcat-10.0.14\\lib\\websocket-api.jar",
+    "WEB-INF/lib/chat-0.0.2.jar",
+    "WEB-INF/lib/jakarta.activation-2.0.1.jar",
+    "WEB-INF/lib/jakarta.mail-2.0.1.jar",
+    "WEB-INF/lib/jakarta.mail-api-2.0.1.jar",
+    "WEB-INF/lib/jakarta.xml.bind-api-3.0.0.jar",
+    "WEB-INF/lib/jaxb-core-3.0.0.jar",
+    "WEB-INF/lib/jaxb-impl-3.0.0.jar",
+    "WEB-INF/lib/json-simple-1.1.1.jar",
+    "WEB-INF/lib/postgresql-42.3.1.jar",
+    "WEB-INF/lib/smtp-1.6.5.jar"
+  ]
 }
